# OpsKit

./: .gitignore  README.md  demo_incidents_v41.csv  findings_v41.jsonl  opskit.toml  playbook_v41_weekly.xlsx  pyproject.toml  test_opskit4.py
.github/workflows/: ci.yml
