[project]
name = "opskit4"
version = "4.0.0"
requires-python = ">=3.12"
dependencies = ["duckdb>=1.5", "openpyxl>=3.1", "pandas>=2.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test_opskit4.py"]
