[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "opskit4"
version = "4.1.0"
description = "Operational analyst playbooks — conditional driver analysis, SHAPE → TRUST → CHANGE → DRIVER → CONCENTRATION → ACTION"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Mohd Saif Hussain" }]
dependencies = ["duckdb>=1.5", "openpyxl>=3.1", "pandas>=2.0"]

[project.urls]
Homepage = "https://github.com/MohdSaifHussain/OpsKit"
Repository = "https://github.com/MohdSaifHussain/OpsKit"

[project.scripts]
opskit = "opskit4:main"

[project.optional-dependencies]
dev = ["pytest>=9.0", "mypy>=2.0", "ruff>=0.15"]

[tool.setuptools]
py-modules = ["opskit4"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test_opskit4.py"]
